因不在使用文件读取数据使得数据格式改变，要使用新的数据预处理将数据处理给数据库

--- a/openvswitch-2.11.1/数据处理/对获取的数据进行处理生成data.ipynb
+++ b/openvswitch-2.11.1/数据处理/对获取的数据进行处理生成data.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4800018\n"
+      "8379312\n"
      ]
     }
    ],
@@ -23,7 +23,7 @@
     "            line_cpu=f_cpu.readline()\n",
     "        if len(line_cpu)==0:\n",
     "            break\n",
-    "        f_out.write(line_data[:-1]+\" \"+line_cpu.split(\" \",1)[1]+\"\\n\")\n",
+    "        f_out.write(line_data[:-1]+line_cpu.split(\" \",1)[1]+\"\\n\")\n",
     "        line_data = f_data.readline() \n",
     "        i=i+1\n",
     "    print(i)"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "line = yuan_f.readline()             # 调用文件的 readline()方法  \n",
     "i=0;\n",
     "while line:  \n",
-    "    if len(line)<20:\n",
+    "    if len(line.split())==1:\n",
     "        if i>0:\n",
     "            cpu_f.write(time[:-1]+\" \"+str(cpu)+\" \"+str(memory)+\"\\n\")\n",
     "            cpu=0.0\n",
@@ -52,8 +52,8 @@
     "        time=line\n",
     "    else:\n",
     "        items=line.split()\n",
-    "        cpu=cpu+float(items[2])\n",
-    "        memory=memory+float(items[3])\n",
+    "        cpu=cpu+float(items[0])\n",
+    "        memory=memory+float(items[1])\n",
     "    line = yuan_f.readline()  \n",
     "    i=i+1\n",
     "cpu_f.close()\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +72,7 @@
     "i=0;\n",
     "while line:  \n",
     "    if len(line.split(\"Gary:\"))>1:\n",
+    "        items=line.split(\"Gary: \")[1].split()\n",
     "        data_f.write(line.split(\"Gary: \")[1]);\n",
     "    line = yuanDip.readline() \n",
     "    i=i+1\n",
