--- a/ovs/文档/内核流表查询过程.md
+++ b/ovs/文档/内核流表查询过程.md
@@ -1,4 +1,4 @@
-![ovs内核流表查询相关数据结构图](..\img\ovs hash表查询相关数据结构图.jpg)
+![ovs内核流表查询相关数据结构图](https://github.com/liqia/SDN-AI-/blob/master/ovs/img/ovs%20hash%E8%A1%A8%E6%9F%A5%E8%AF%A2%E7%9B%B8%E5%85%B3%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E5%9B%BE.jpg)
 
 上图是OVS内核流表的查找相关的数据结构以及查表的流程图。
 
